# appointment_bot

./: LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
appointment_bot/: __init__.py  dataset.py  features.py  plots.py
appointment_bot/features/: build_features.py
appointment_bot/modeling/: predict.py  train.py
docs/: 00_project_background.md  01_structure.md  02_reflection.md
models/: gb_tuned.pkl  logreg.pkl  lr_tuned.pkl  rf_tuned.pkl
notebooks/: INST414_Sprint_2.ipynb
src/data/: download_dataset.py
src/models/: train_model.py  tune_models.py
tests/: test_preprocess.py
